# easy_slam

./: .gitmodules  CMakeLists.txt  test.ipynb
Examples/: KITTI00-02.yaml  stereo_kitti.cc  stereo_kitti.py
include/: FeatureExtractor.h  Frame.h  System.h
pysrc/: slam.py
python/: easyslam.py  feature_extractor.py  feature_matcher.py
src/: FeatureExtractor.cc  Frame.cc  System.cc  geometry_utils.cc
test/: CMakeLists.txt  test.cc
